add draft dfbb code

--- a/dfbb.conf
+++ b/dfbb.conf
@@ -96,7 +96,7 @@ freeze_mode=1
 group_mask=1
 
 ; This slave's watchdog timeout, in milliseconds.
-watchdog_ms=300
+watchdog_ms=3000
 
 ; Module configuration.
 ; For each module plugged into the slave, add a module_xxx
@@ -107,15 +107,18 @@ watchdog_ms=300
 ;module_1=dummy output module
 ;module_2=dummy input module
 
-module_0=1  byte input con  (0x90)
+module_0=32 byte input con  (0x40,0x9F)
+;module_0=32 byte input   (0x40,0x1F)
+module_1=32 byte output con (0x80,0x9F)
+;module_1=32 byte output  (0x80,0x1F)
 
 ; The number of output bytes this slave transmits to the
 ; master in Data_Exchange.
 ; This usually depends on the modules plugged into the slave.
-output_size=2
+output_size=32
 
 ; The number of input bytes this slave expects to receive
 ; in Data_Exchange.
 ; This usually depends on the modules plugged into the slave.
-input_size=2
+input_size=8
 
